# astro-provider-ray

./: .astro-registry.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CODEOWNERS  CONTRIBUTING.rst  Makefile  README.md  README.rst  codespell-ignore-words.txt  key.pem  mlc-config.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  python-package.yml  release.yml  test.yml
dev/: Dockerfile  Dockerfile.ray_google_cloud  docker-compose.override.yml  kind-config.yaml
dev/.astro/: test_dag_integrity_default.py
dev/dags/: ray_dynamic_config.py  ray_single_operator.py  ray_taskflow_example.py  ray_taskflow_example_existing_cluster.py  setup-teardown.py
dev/dags/ray_scripts/: script-gpu.py  script.py
dev/dags/scripts/: ray-gke.yaml  ray-gpu.yaml  ray.yaml
dev/tests/dags/: test_dag_example.py
docs/: CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  conf.py  index.rst  requirements.txt
docs/api/: ray_provider.decorators.rst  ray_provider.hooks.rst  ray_provider.operators.rst  ray_provider.rst  ray_provider.triggers.rst
docs/getting_started/: astro_setup.rst  cloud_platforms_auth.rst  code_samples.rst  kind_ray.rst  local_development_setup.rst  setup.rst
example_dags/: ray_single_operator.py  ray_taskflow_example.py  ray_taskflow_example_dynamic_config.py  setup-teardown.py
example_dags/scripts/: k8-gpu.yaml  ray.yaml
ray/decorators/: kuberay.py
ray/operators/: kuberay.py
ray/triggers/: kuberay.py
ray_provider/: __init__.py  constants.py  decorators.py  exceptions.py  hooks.py  operators.py  triggers.py
ray_provider/decorators/: kuberay.py  ray.py
ray_provider/example_dags/: ray_decorator.py  run_gpu_task.py  sample.py  start_ray_cluster.py
ray_provider/example_dags/ray_scripts/: script-gpu.py  script.py
ray_provider/example_dags/scripts/: k8.yaml  ray-gpu.yaml  ray-service.yaml
ray_provider/hooks/: ray.py
ray_provider/operators/: kuberay.py  ray.py
ray_provider/triggers/: kuberay.py  ray.py
scripts/test/: integration_gke_test.sh  integration_kind_test.sh  integration_test.sh  pre-install-airflow.sh  unit_cov.sh  unit_test.sh
tests/: __init__.py  test_dag_example.py  test_decorators.py  test_hooks.py  test_operators.py  test_ray_decorators.py  test_triggers.py
tests/decorators/: test_ray_decorators.py
tests/hooks/: test_ray_hooks.py
tests/operators/: test_ray_operators.py
tests/triggers/: test_ray_triggers.py
