[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astro-provider-ray"
authors = [{ name = "Astronomer", email = "humans@astronomer.io" }]
license = { text = "Apache License 2.0" }
description = "[DEPRECATED - no longer maintained] An Apache Airflow provider package built by Astronomer to integrate with Ray."
classifiers = [
    "Development Status :: 7 - Inactive",
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
requires-python = ">=3.8, <3.13"
dependencies = [
    "apache-airflow>=2.7",
    "ray[default]",
    "kubernetes",
    "requests",
    "pytest",
    "PyYAML",
    "pytest-asyncio",
    "apache-airflow-providers-cncf-kubernetes"
]

[project.optional-dependencies]
tests = [
    "build",
]

[project.urls]
Homepage = "https://astronomer.io"
Source = "https://github.com/astronomer/astro-provider-ray/"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points.apache_airflow_provider]
provider_info = "ray_provider.__init__:get_provider_info"

[tool.hatch.version]
path = "ray_provider/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/ray_provider"]

[tool.hatch.build.targets.wheel]
packages = ["/ray_provider"]

docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-autobuild",
    "sphinx-autoapi",
    "furo"
]

######################################
# TESTING
######################################

[tool.hatch.envs.tests]
dependencies = [
    "astro-provider-ray[tests]",
    "types-PyYAML",
    "types-attrs",
    "types-requests",
    "types-python-dateutil",
    "apache-airflow=={matrix:airflow}.0",
    "apache-airflow-providers-cncf-kubernetes",
    "pytest>=6.0",
    "pytest-cov",
    # the Airflow constraint file does not pin setuptools, so cap it here: 81+ removed pkg_resources,
    # which parts of the Airflow/Ray stack still import at runtime.
    "setuptools<81"
]
pre-install-commands = ["sh scripts/test/pre-install-airflow.sh {matrix:airflow} {matrix:python}"]

[tool.hatch.envs.tests.env-vars]
# Apply the Airflow constraint file (fetched by pre-install-airflow.sh) to every install in this
# env so providers (cncf-kubernetes, standard, ...) resolve to versions compatible with the
# pinned Airflow, rather than pulling incompatible latest releases (e.g. providers-standard that
# requires a newer Airflow, which previously broke the integration env). Scoped to this env only:
# static checks run in the separate `static-check` env so the constraint never reaches pre-commit's
# own hook tools (ruff, etc.).
PIP_CONSTRAINT = "/tmp/constraint.txt"
UV_CONSTRAINT = "/tmp/constraint.txt"

[[tool.hatch.envs.tests.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
# Airflow 2.7/2.8 dropped: their constraint-pinned cncf-kubernetes (7.x) lacks the
# apps_v1_client/core_v1_client APIs RayHook uses, and both are EOL. (See astronomer-cosmos#2288.)
airflow = ["2.9", "2.10"]

[tool.hatch.envs.tests.scripts]
freeze = "pip freeze"
test = 'sh scripts/test/unit_test.sh'
test-cov = 'sh scripts/test/unit_cov.sh'
test-integration = 'sh scripts/test/integration_test.sh'

# Static checks live in their own detached env (no Airflow, no PIP_CONSTRAINT) so the Airflow
# constraint file never reaches pre-commit's own hook tools. pre-commit manages each hook's deps
# in isolated environments, so the project itself does not need to be installed here.
[tool.hatch.envs.static-check]
detached = true
dependencies = [
    "pre-commit",
    # provides pkg_resources, which nodeenv (pre-commit's node-based hooks, e.g. markdown-link-check)
    # needs; pin <81 because setuptools 81+ removed pkg_resources (CI floated to 82.0.0 -> nodeenv
    # ModuleNotFoundError).
    "setuptools<81"
]

[tool.hatch.envs.static-check.scripts]
run = "pre-commit run --all-files"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
minversion = "6.0"
markers = ["integration"]

######################################
# DOCS
######################################

[tool.hatch.envs.docs]
dependencies = [
    "aenum",
    "pydantic>=1.10.0",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-autobuild",
    "furo",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs docs/_build"
serve = "sphinx-autobuild docs docs/_build"

######################################
# THIRD PARTY TOOLS
######################################
[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311','py312']

[tool.isort]
profile = "black"
known_third_party = ["airflow"]

[tool.mypy]
strict = true
ignore_missing_imports = true
no_warn_unused_ignores = true

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = ["C901", "I", "F"]
ignore = ["F541"]
[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.distutils.bdist_wheel]
universal = true
